Fix overflow of long handle text on narrow screens

--- a/src/partials/contact/contact.css
+++ b/src/partials/contact/contact.css
@@ -25,6 +25,7 @@
 .contact-item {
     display: flex;
     padding: 0.5rem 0;
+    overflow-x: scroll;
 }
 
 .contact-item::after {
@@ -32,6 +33,7 @@
 }
 
 .contact-item > img {
+    flex-shrink: 0;
     width: 1em;
     margin-top: 0.3rem;
     margin-right: 1rem;
